--- a/style.css
+++ b/style.css
@@ -1,20 +1,67 @@
-body {
-  background-color: #f8f8f8;
+.text-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  padding-top: 50%;
+  color: white;
+  font-size: 24px;
+}
+.thumbnail {
+  width: 100px; /* Lebar thumbnail */
+  height: 100px; /* Tinggi thumbnail */
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  overflow: hidden;
 }
 
-.container {
-  max-width: 500px;
+.thumbnail img {
+  width: 100%;
+  height: 100%; 
+  object-fit: cover;
+}
+
+.thumbnail:hover {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+body {
+  background-image: url("https://cdn.meitang.xyz/file/BQACAgUAAxkDAAEBEvhm8r-W0nKOpSa2OkZtlQ6vcvpoEAACGRQAAuPgmFfH0l_sMrmqXjYE");
+  background-position: left Top;
+  background-size: cover;
+  background-repeat: repeat;
+}
+.text-box {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radis: 2px;
+  resize: none;
+}
+.container 
+h1 {
+  text-shadow: 0 0 3px black;
+  color: burlywood;
+  max-width: 900px;
   margin: 0 auto;
-  text-align: center;
+  text-align: bold;
 }
 
 h1 {
-  font-size: 3rem;
-  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 ul {
-  list-style-type: none;
+  font-weight: bolder;
+  list-style-type: bold;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -22,14 +69,17 @@ ul {
 }
 
 li {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 a {
-  color: #000;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  color: #000000;
+  text-shadow: 0 0 5px black;
   text-decoration: none;
 }
 
 a:hover {
   color: #4298f4;
 }
+
